tests/class_object_subtyping/class_object_subtyping.exp
Error ----------------------------------------------------------------------------------------------------- test.js:22:1

Cannot cast `a` to `O` because `A` [1] is not a subtype of `O` [2]. Class instances are not subtypes of object types;
consider rewriting `O` [2] as an interface. [class-object-subtyping]

   test.js:22:1
   22| a as O; // error
       ^

References:
   test.js:17:17
   17| declare var a : A;
                       ^ [1]
   test.js:22:6
   22| a as O; // error
            ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:26:1

Cannot cast `o` to `A` because `O` [1] is incompatible with `A` [2]. [incompatible-type]

   test.js:26:1
   26| o as A; // error
       ^

References:
   test.js:18:17
   18| declare var o : O;
                       ^ [1]
   test.js:26:6
   26| o as A; // error
            ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:30:1

Cannot cast `i` to `A` because `I` [1] is incompatible with `A` [2]. [incompatible-type]

   test.js:30:1
   30| i as A; // error
       ^

References:
   test.js:19:17
   19| declare var i : I;
                       ^ [1]
   test.js:30:6
   30| i as A; // error
            ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

Cannot cast `i` to `O` because `I` [1] is not a subtype of `O` [2]. Class instances are not subtypes of object types;
consider rewriting `O` [2] as an interface. [class-object-subtyping]

   test.js:31:1
   31| i as O; // error
       ^

References:
   test.js:19:17
   19| declare var i : I;
                       ^ [1]
   test.js:31:6
   31| i as O; // error
            ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:34:1

Cannot cast `t` to `A` because `T` [1] is incompatible with `A` [2]. [incompatible-type]

   test.js:34:1
   34| t as A; // error
       ^

References:
   test.js:20:17
   20| declare var t : T;
                       ^ [1]
   test.js:34:6
   34| t as A; // error
            ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:1

Cannot cast `t` to `O` because `T` [1] is not a subtype of `O` [2]. Class instances are not subtypes of object types;
consider rewriting `O` [2] as an interface. [class-object-subtyping]

   test.js:35:1
   35| t as O; // error
       ^

References:
   test.js:20:17
   20| declare var t : T;
                       ^ [1]
   test.js:35:6
   35| t as O; // error
            ^ [2]



Found 6 errors
